Fix Size of Nav Header on Mobile

--- a/Technical Documentation Page/css/documentation.css
+++ b/Technical Documentation Page/css/documentation.css
@@ -119,7 +119,7 @@ li {
     }
 
     #navbar header {
-        font-size: 2em;
+        font-size: 2.5vw;
     }
 
     #nav-list li {
